--- a/page3.html
+++ b/page3.html
@@ -6,6 +6,7 @@
         table{
             border: 1px solid black;
             height: 100px;
+            width: 100%; 
             background-color: Mauve;
         }
       </style>
