--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
        <style>
         table{
             height: 100px;
+            width: 100%; 
             background-color: white;
         }
       </style>
