--- a/page3.html
+++ b/page3.html
@@ -24,13 +24,13 @@
            <td width="33%"><a href="page3.html">Matthew's Automated Feature</a></td>
          </tr>
          <tr>
-           <td colspan="3" class="my-class">Anthony's Automated Feature</td>
+           <td colspan="3" class="my-class">Matthew's Automated Feature</td>
          </tr>
          <tr>
             <td rowspan="2" class="question-size">Who is this device for?</td>
             <td rowspan="2" colspan="2">
                <ul>
-               <li>People with a physical disability or those who buy a lot of things in bulk or large items.</li>
+               <li>People with a visually impaired disability or those who are social butterflies or night owls .</li>
                </ul>
             </td>
          </tr>
@@ -39,8 +39,8 @@
             <td class="question-size">What problem does it solve?</td>
             <td colspan="2">
                <ul>
-                  <li>Needing to hold and close the door manually.</li>
-                  <li>Having to carry keys with you</li>
+                  <li>Prevents robbers to rob the place quietly without alerting the homeowner.</li>
+                  <li>Motion detection alerts that have to be seen on a mobile device</li>
                </ul>
             </td>
          </tr>
@@ -48,13 +48,11 @@
             <td class="question-size">What items do you need?</td>
             <td colspan="2">
                <ul>
-                  <li>2 microbits</li>
-                  <li>2 Breakoutboards</li>
-                  <li>4 Push buttons</li>
-                  <li>2 Servo motors</li>
-                  <li>6 Wires</li>
-                  <li>8 Alligator clips with pig tail or male to female jumper wires</li>
-                  <li>1 Breadboard</li>
+                  <li>2 Microbits</li>
+                  <li>1 Push Button</li>
+                  <li>1 LED</li>
+                  <li>4 Alligator Wires</li>
+                  <li>1 Battery Pack</li>
                </ul>
             </td>
          </tr>
@@ -62,51 +60,54 @@
             <td height="12px" colspan="3"></td>
          </tr>
          <tr>
-            <td rowspan="2" class="question-size">Protype Images</td>
-            <td colspan="2">
-              <img src="Inside of the house.webp"
-                 height="200px" width="20%" class="center"
-                 alt="Inside of the house">
+            <td rowspan="4" class="question-size">Protype Images</td>
+            <td colspan="4">
+              <img src="https://cdn.discordapp.com/attachments/1280162490680082443/1331083145264496750/IMG_4847.jpg"
+                 height="210px" width="20%" class="center"
+                 alt="Inside of the house push button">
             </td>
          </tr>
             <td colspan="2">
-               <img src="Outside of the house.webp"
+               <img src="https://cdn.discordapp.com/attachments/1280162490680082443/1331083145264496750/IMG_4847.jpg"
                   height="200px" width="20%" class="center"
-                  alt="Outside of the house">
+                  alt="Inside of the house push button part 2">
             </td>
-         <tr>
+            <tr>
+            <td colspan="2">
+                <img src="hhttps://cdn.discordapp.com/attachments/1280162490680082443/1331083478694887546/IMG_4851.png"
+                height="210px" width="20%" class="center"
+                 alt="Inside of house silent alarm">
+            </td>
+            </tr>
+            <tr>
+            <td colspan="2">
+            <img src="https://cdn.discordapp.com/attachments/1280162490680082443/1331083479424958597/IMG_4852.png
+            height="210px" width="20%" class="center"
+                 alt="Outisde of house silent alarm">
+             </td>
+             </tr>
             <td height="12px" colspan="3"></td>
          </tr>
          <tr>
             <td rowspan="3" class="question-size">Protype Videos</td>
             <td colspan="2">
                <video class="center" width="400" controls>
-                  <source src="Door opening from outside.mp4" type="video/mp4">
+                  <source src="IMG_4846.mp4mp4" type="video/mp4">
                  Your browser does not support HTML video.
                </video>
-               <p class="mid-text">Opening and closing the door from the outside</p>
+               <p class="mid-text">Inside of home alarm system(When someone is at home)</p>
             </td>
          </tr>
          <tr>
             <td colspan="2">
                  <video class="center" width="400" controls>
-                   <source src="Lock and Unlock from the outside(full video).mp4" type="video/mp4">
+                   <source src="IMG_4850.mp4" type="video/mp4">
                  Your browser does not support HTML video.
                </video>
-               <p class="mid-text">Locking and unlock the door from the outside</p>
+               <p class="mid-text">Inside/Outside of silent alarm system(When someone is away from home)</p>
             </td>
          </tr>
-         <tr>
-            <td colspan="2">
-                 <video class="center" width="400" controls>
-                   <source src="View from the inside of the house.mp4" type="video/mp4">
-                 Your browser does not support HTML video.
-               </video>
-               <p class="mid-text">Opening, Closing, Locking, Unlock the door from the inside</p>
-            </td>
-         </tr>
-            <td height="12px" colspan="3"></td>
-         </tr>
+         
       </table>
        <style>
 footer {
@@ -121,3 +122,4 @@ footer {
          </footer>
    </body>
 </html>
+         
