--- a/page3.html
+++ b/page3.html
@@ -81,7 +81,7 @@
             </tr>
             <tr>
             <td colspan="2">
-            <img src="https://cdn.discordapp.com/attachments/1280162490680082443/1331083479424958597/IMG_4852.png
+            <img src="IMG_4852.png"
             height="210px" width="20%" class="center"
                  alt="Outisde of house silent alarm">
              </td>
