--- a/page3.html
+++ b/page3.html
@@ -14,7 +14,7 @@
    <body>
       <table border=1">
          <tr>
-            <th colspan="3"><img src="Microbit Banner.jpg" alt="Push Button" 
+            <th colspan="3"><img src="Microbit_Banner.jpg" alt="Push Button" 
                                height="400px" width="1350px">
             </th>
          </tr>
