--- a/page3.html
+++ b/page3.html
@@ -92,7 +92,7 @@
             <td rowspan="3" class="question-size">Protype Videos</td>
             <td colspan="2">
                <video class="center" width="400" controls>
-                  <source src="IMG_4846.mp4mp4" type="video/mp4">
+                  <source src="IMG_4846.mp4" type="video/mp4">
                  Your browser does not support HTML video.
                </video>
                <p class="mid-text">Inside of home alarm system(When someone is at home)</p>
