--- a/page3.html
+++ b/page3.html
@@ -62,19 +62,19 @@
          <tr>
             <td rowspan="4" class="question-size">Protype Images</td>
             <td colspan="4">
-              <img src="https://cdn.discordapp.com/attachments/1280162490680082443/1331083145264496750/IMG_4847.jpg"
+              <img src="IMG_4847.jpg"
                  height="210px" width="20%" class="center"
                  alt="Inside of the house push button">
             </td>
          </tr>
             <td colspan="2">
-               <img src="https://cdn.discordapp.com/attachments/1280162490680082443/1331083145264496750/IMG_4847.jpg"
+               <img src="IMG_4848.jpg"
                   height="200px" width="20%" class="center"
                   alt="Inside of the house push button part 2">
             </td>
             <tr>
             <td colspan="2">
-                <img src="hhttps://cdn.discordapp.com/attachments/1280162490680082443/1331083478694887546/IMG_4851.png"
+                <img src="IMG_4851.png"
                 height="210px" width="20%" class="center"
                  alt="Inside of house silent alarm">
             </td>
