--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
        <style>
         table{
             height: 100px;
-            width: 100%; 
+            width: 100%;
             background-color: white;
         }
       </style>
@@ -14,7 +14,7 @@
       <table border= 1px soild">
          <tr>
             <th colspan="3"><img src="Microbit Banner.jpg" alt="A Microbit!" 
-                               height="400px" width="1350px">
+                              height="400px" width="1350px">
             </th>
          </tr>
          <tr>
@@ -26,19 +26,13 @@
            <td colspan="3" class="title-centered">Our Goal</td>
          </tr>
          <tr>
-           <td rowspan="2" colspan="3" class="mid-text">We are creating a home automated system that assists in performing a task.</td>
-         </tr>
-                   <td height="150px" colspan="3"></td>
-              </tr>
+           <td colspan="3" height="150px" class="mid-text">We are creating a home automated system that assists in performing a task.</td>
            <tr>
-           <td rowspan="2" colspan="3">
+           <td colspan="3" height="40px">
                 <a href="https://app.bookcreator.com/library/-OEZnp7jDBpKVG_KUbP7/vFKfmvTELuVEodvIWHwk0m80h8B2/k-vbHi5IQyGZnhTejRc4Hg/eaScDwt6RTyuZszpNEaqMA">
                      Our Book Creator!</a>
            </td>
          </tr>
-           <tr>
-                <td height="40px" colspan="3"></td>
-           </tr>
       </table>
       <style>
 footer {
@@ -53,3 +47,4 @@ footer {
          </footer>
    </body>
 </html>
+
