--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <body>
       <table border= 1px soild">
          <tr>
-            <th colspan="3"><img src="Microbit Banner.jpg" alt="A Microbit!" 
+            <th colspan="3"><img src="Microbit_Banner.jpg" alt="A Microbit!" 
                               height="400px" width="1350px">
             </th>
          </tr>
