--- a/anthony.html
+++ b/anthony.html
@@ -1,1 +1,122 @@
-
+<!DOCTYPE html>
+<html>
+   <link rel="stylesheet" href="style.css">
+   <head> 
+      <style>
+        table{
+            border: 1px solid black;
+            height: 100px;
+            background-color: Mauve;
+        }
+      </style>
+   </head>
+   <body>
+      <table border=1">
+         <tr>
+            <th colspan="3"><img src="Microbit Banner.jpg" alt="A Servo Motor" 
+                               height="400px" width="1350px">
+            </th>
+         </tr>
+         <tr>
+           <td width="33%"><a href="index.html">Our Goal</a></td>
+           <td width="33%"><a href="page2.html">Anthony's Automated Feature</a></td>
+           <td width="33%"><a href="page3.html">Matthew's Automated Feature</a></td>
+         </tr>
+         <tr>
+           <td colspan="3" class="my-class">Anthony's Automated Feature</td>
+         </tr>
+         <tr>
+            <td rowspan="2" class="question-size">Who is this device for?</td>
+            <td rowspan="2" colspan="2">
+               <ul>
+               <li>People with a physical disability or those who buy a lot of things in bulk or large items.</li>
+               </ul>
+            </td>
+         </tr>
+         <tr height="30px"></tr>
+         <tr>
+            <td class="question-size">What problem does it solve?</td>
+            <td colspan="2">
+               <ul>
+                  <li>Needing to hold and close the door manually.</li>
+                  <li>Having to carry keys with you</li>
+               </ul>
+            </td>
+         </tr>
+         <tr>
+            <td class="question-size">What items do you need?</td>
+            <td colspan="2">
+               <ul>
+                  <li>2 microbits</li>
+                  <li>2 Breakoutboards</li>
+                  <li>4 Push buttons</li>
+                  <li>2 Servo motors</li>
+                  <li>6 Wires</li>
+                  <li>8 Alligator clips with pig tail or male to female jumper wires</li>
+                  <li>1 Breadboard</li>
+               </ul>
+            </td>
+         </tr>
+         <tr>
+            <td height="12px" colspan="3"></td>
+         </tr>
+         <tr>
+            <td rowspan="2" class="question-size">Protype Images</td>
+            <td colspan="2">
+              <img src="Inside of the house.webp"
+                 height="200px" width="20%" class="center"
+                 alt="Inside of the house">
+            </td>
+         </tr>
+            <td colspan="2">
+               <img src="Outside of the house.webp"
+                  height="200px" width="20%" class="center"
+                  alt="Outside of the house">
+            </td>
+         <tr>
+            <td height="12px" colspan="3"></td>
+         </tr>
+         <tr>
+            <td rowspan="3" class="question-size">Protype Videos</td>
+            <td colspan="2">
+               <video class="center" width="400" controls>
+                  <source src="Door opening from outside.mp4" type="video/mp4">
+                 Your browser does not support HTML video.
+               </video>
+               <p class="mid-text">Opening and closing the door from the outside</p>
+            </td>
+         </tr>
+         <tr>
+            <td colspan="2">
+                 <video class="center" width="400" controls>
+                   <source src="Lock and Unlock from the outside(full video).mp4" type="video/mp4">
+                 Your browser does not support HTML video.
+               </video>
+               <p class="mid-text">Locking and unlock the door from the outside</p>
+            </td>
+         </tr>
+         <tr>
+            <td colspan="2">
+                 <video class="center" width="400" controls>
+                   <source src="View from the inside of the house.mp4" type="video/mp4">
+                 Your browser does not support HTML video.
+               </video>
+               <p class="mid-text">Opening, Closing, Locking, Unlock the door from the inside</p>
+            </td>
+         </tr>
+            <td height="12px" colspan="3"></td>
+         </tr>
+      </table>
+       <style>
+footer {
+  text-align: center;
+  padding: 3px;
+  background-color: DarkSalmon;
+  color: white;
+}
+      </style>
+         <footer>
+  <p>By Anthony Zhang and Matthew Tang<br>
+         </footer>
+   </body>
+</html>
