--- a/page3.html
+++ b/page3.html
@@ -20,7 +20,7 @@
          </tr>
          <tr>
            <td width="33%"><a href="index.html">Our Goal</a></td>
-           <td width="33%"><a href="page2.html">Anthony's Automated Feature</a></td>
+           <td width="33%"><a href="anthony.html">Anthony's Automated Feature</a></td>
            <td width="33%"><a href="page3.html">Matthew's Automated Feature</a></td>
          </tr>
          <tr>
